// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutModalBoxCloseButton Test 1`] = `
<div
  className="pf-c-about-modal-box__close"
>
  <Button
    aria-label="Close Dialog"
    onClick={[Function]}
    variant="plain"
  >
    <TimesIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </Button>
</div>
`;

exports[`AboutModalBoxCloseButton Test close button aria label 1`] = `
<div
  className="pf-c-about-modal-box__close"
>
  <Button
    aria-label="Klose Daylok"
    onClick={[Function]}
    variant="plain"
  >
    <TimesIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </Button>
</div>
`;

exports[`AboutModalBoxCloseButton Test onclose 1`] = `
<div
  className="pf-c-about-modal-box__close"
>
  <Button
    aria-label="Close Dialog"
    onClick={[MockFunction]}
    variant="plain"
  >
    <TimesIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </Button>
</div>
`;
